--- a/.github/release.yml
+++ b/.github/release.yml
@@ -3,21 +3,21 @@ changelog:
     labels:
       - chore
   categories:
-    - title: Breaking Changes 🛠
+    - title: 💥 Breaking Changes
       labels:
-        - breaking-change
-    - title: Exciting New Features 🎉
+        - 💥 breaking-change
+    - title: ✨ Exciting New Features
       labels:
-        - enhancement
-    - title: Bug Fixes 🔧
+        - ✨ enhancement
+    - title: 🐞 Bug Fixes
       labels:
-        - bug
-    - title: Documentation 📖
+        - 🐞 bug
+    - title: 🛠️ Dependencies
       labels:
-        - docs
-    - title: Dependencies 🤖
+        - 🛠️ dependencies
+    - title: 📖 Documentation
       labels:
-        - dependencies
+        - 📖 docs
     - title: Other Changes
       labels:
         - "*"
