--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,9 @@
 name: CI
+
+env:
+  # renovate: github=golangci/golangci-lint
+  GO_LINT_CI_VERSION: v1.57.2
+
 on:
   workflow_dispatch:
   pull_request:
@@ -14,14 +19,32 @@ jobs:
     name: Build & Test
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-go@v5
         with:
           go-version-file: 'go.mod'
 
       - run: go build
-      - run: go test ./... -race -covermode=atomic -coverprofile=coverage.out
+      - run: go test ./... -timeout 20s -race -covermode=atomic -coverprofile=coverage.out -coverpkg=./...
+      - run: go test ./... -timeout 20s -bench . -benchmem -count 3
+
+      - name: go build (with goreleaser)
+        uses: goreleaser/goreleaser-action@v5
+        with:
+          version: latest
+          args: release --snapshot
+        env:
+          GITHUB_TOKEN: ""
 
       - uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: dists
+          path: dist/
   lint:
     name: lint
     runs-on: ubuntu-latest
@@ -30,34 +53,13 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version-file: 'go.mod'
-          cache: false
+
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v4
+        uses: golangci/golangci-lint-action@v5
         with:
           args: --out-format "github-actions,colored-line-number"
-  goreleaser:
-    name: goreleaser
-    runs-on: ubuntu-latest
-    if: !startsWith(github.ref, 'refs/tags/v')
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-go@v5
-        with:
-          go-version-file: 'go.mod'
+          version: ${{ env.GO_LINT_CI_VERSION }}
 
-      - name: go build (with goreleaser)
-        uses: goreleaser/goreleaser-action@v5
-        with:
-          version: latest
-          args: release --snapshot
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/upload-artifact@v4
-        with:
-          name: dists
-          path: dist/
   publish:
     name: Publish package
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
@@ -67,6 +69,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      packages: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -74,6 +77,14 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version-file: 'go.mod'
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
