--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,21 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:recommended"
+    "config:recommended",
+    "helpers:pinGitHubActionDigestsToSemver"
   ],
   "labels": [
     "🛠️ dependencies"
   ],
   "dependencyDashboardApproval": true,
+  "packageRules": [
+    {
+      "groupName": "GitHub Actions",
+      "matchManagers": [
+        "github-actions"
+      ]
+    }
+  ],
   "postUpdateOptions": [
     "gomodTidy"
   ],
