--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,7 +1,4 @@
-before:
-  hooks:
-    - rm -rf 3rdpartylicenses
-    - go run github.com/google/go-licenses@latest save . --save_path=3rdpartylicenses
+version: 2
 
 builds:
   - binary: $REPO
@@ -21,56 +18,40 @@ builds:
     ldflags:
       - >-
         -s -w
-        -X github.com/prometheus/common/version.Version={{.Version}}
-        -X github.com/prometheus/common/version.Revision={{.FullCommit}}
-        -X github.com/prometheus/common/version.Branch={{.Branch}}
-        -X github.com/prometheus/common/version.BuildDate={{.Date}}
-archives:
-  - format: tar.xz
-    files:
-      - LICENSE.txt
-      - 3rdpartylicenses/**/*
 
-dockers:
-  - image_templates:
-      - "ghcr.io/jkroepke/$REPO:latest-amd64"
-      - "ghcr.io/jkroepke/$REPO:{{ .Version }}-amd64"
-    use: buildx
-    dockerfile: Dockerfile
-    build_flag_templates:
-      - "--label=org.opencontainers.image.created={{.Date}}"
-      - "--label=org.opencontainers.image.title={{.ProjectName}}"
-      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.version={{.Version}}"
-      - "--label=org.opencontainers.image.licenses=MIT"
-      - "--label=org.opencontainers.image.source=https://github.com/jkroepke/azure-monitor-exporter"
-      - '--label=org.opencontainers.image.description="A simple prometheus exporter to provide metrics from Azure Monitor in Prometheus format"'
-      - "--platform=linux/amd64"
-  - image_templates:
-      - "ghcr.io/jkroepke/$REPO:latest-arm64v8"
-      - "ghcr.io/jkroepke/$REPO:{{ .Version }}-arm64v8"
-    use: buildx
-    goarch: arm64
-    dockerfile: Dockerfile
-    build_flag_templates:
-      - "--label=org.opencontainers.image.created={{.Date}}"
-      - "--label=org.opencontainers.image.title={{.ProjectName}}"
-      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.version={{.Version}}"
-      - "--label=org.opencontainers.image.source=https://github.com/jkroepke/azure-monitor-exporter"
-      - '--label=org.opencontainers.image.description="A simple prometheus exporter to provide metrics from Azure Monitor in Prometheus format"'
-      - "--platform=linux/arm64/v8"
+# kos:
+#   - repository: ghcr.io/jkroepke/$REPO
+#     tags:
+#       - "{{.Version}}"
+#       - latest
+#     bare: true
+#     base_image: gcr.io/distroless/static-debian12:nonroot # scratch is not supported, see https://github.com/ko-build/ko/pull/1350
+#     preserve_import_paths: false
+#     creation_time: "{{.CommitTimestamp}}"
+#     ko_data_creation_time: "{{.CommitTimestamp}}"
+#     platforms:
+#       - linux/amd64
+#       - linux/arm64
+#     labels:
+#       org.opencontainers.image.created: "{{.Date}}"
+#       org.opencontainers.image.title: "{{.ProjectName}}"
+#       org.opencontainers.image.revision: "{{.FullCommit}}"
+#       org.opencontainers.image.version: "{{.Version}}"
+#       org.opencontainers.image.source: "https://github.com/jkroepke/$REPO"
+#       org.opencontainers.image.description: "Infinity Datasource Proxy is a middleware designed to enhance the functionality of the Infinity Datasource plugin for Grafana by addressing its limitations and extending its capabilities."
+#
+# docker_signs:
+#   - artifacts: manifests
+#     output: true
+#     cmd: cosign
+#     env:
+#       - COSIGN_EXPERIMENTAL=1
+#     args:
+#       - sign
+#       - '--oidc-issuer={{if index .Env "CI"}}https://token.actions.githubusercontent.com{{else}}https://oauth2.sigstore.dev/auth{{end}}'
+#       - '--yes'
+#       - '${artifact}'
 
-docker_manifests:
-  - name_template: "ghcr.io/jkroepke/$REPO:latest"
-    image_templates:
-      - "ghcr.io/jkroepke/$REPO:latest-amd64"
-      - "ghcr.io/jkroepke/$REPO:latest-arm64v8"
-  - name_template: "ghcr.io/jkroepke/$REPO:{{ .Version }}"
-    image_templates:
-      - "ghcr.io/jkroepke/$REPO:{{ .Version }}-amd64"
-      - "ghcr.io/jkroepke/$REPO:{{ .Version }}-arm64v8"
-      
 report_sizes: true
 
 metadata:
