--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,6 +78,8 @@ jobs:
         with:
           go-version-file: 'go.mod'
 
+      # - uses: sigstore/cosign-installer@v3.5.0
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
